# avclass

./: .gitignore  Dockerfile  EVALUATION.md  LICENSE  MANIFEST.in  README.md  avclass_alias_detect.py  avclass_generic_detect.py  avclass_labeler.py  pyproject.toml  setup.py
.circleci/: config.yml
avclass/: README.md  __init__.py  avclass_alias_detect.py  avclass_generic_detect.py  avclass_labeler.py  cli.py  clustering.py  common.py  evaluate.py  input_checker.py  labeler.py  misp.py  normalize.py  update.py  util.py
avclass/data/: andropup.expansion  default.aliases  default.expansion  default.generics  default.tagging  default.taxonomy
avclass/data/misp/cluster/: avclass.json
avclass/data/misp/galaxy/: avclass.json  avclass2.json
avclass/lib/: avclass_common.py  evaluate_clustering.py
avclass2/: README.md  avclass2_input_checker.py  avclass2_labeler.py  avclass2_update_module.py
avclass2/data/: default.expansion  default.tagging  default.taxonomy  tagging  taxonomy
avclass2/data/misp/cluster/: avclass2.json
avclass2/data/misp/galaxy/: avclass2.json
avclass2/lib/: avclass2_common.py  evaluate_clustering.py
data/: default.aliases  default.banned  default.generics  default.hacktool  samples.json  screenshots.banned
examples/: malheurReference_gt.tsv  opswat_md_sample.json  vtv2_sample.json  vtv3_sample.json
lib/: avclass_common.py  evaluate_clustering.py
lists/: default.generics
misp/cluster/: avclass.json
tests/: test_avclass_labeler.py
